[tool.poetry]
name = "dizzy-dedupe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.0.0"
duckdb = "^1.3.2"
pillow = "^11.3.0"
numpy = "^2.3.3"
transformers = "^4.0.0"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
